# ai-orchestrator

./: .env.example  .gitignore  .mcp.json  HOMEWORK_L10_IMPLEMENTATION_PLAN.md  HOMEWORK_L6_IMPLEMENTATION_PLAN.md  HOMEWORK_L8_IMPLEMENTATION_PLAN.md  README.md  alembic.ini  docker-compose.yaml  requirements.txt
alembic/: env.py
prompts/: analyst_plan.yaml  analyst_synthesize.yaml  nl2sql_error.yaml  nl2sql_generate.yaml  orchestrator_system.yaml  query_contextualize.yaml  rag_answer.yaml  rag_evaluate.yaml  rag_refine.yaml
scripts/: clear_tables.py  compare_intent.py  generate_docs.py  seed_chunks.py  seed_tables.py  smoke_analyst.py  smoke_mcp.py  smoke_memory.py  smoke_nl2sql.py  smoke_prompt_cache.py  smoke_tools.py  train_intent.py
skillab-py/: README.md  pyproject.toml
skillab-py/src/skillab/: __init__.py  db.py  rag.py
skillab-py/src/skillab/llm/: __init__.py  base.py  registry.py
skillab-py/src/skillab/llm/providers/: __init__.py  anthropic.py  google.py  langchain.py  local.py  openai.py
skillab-py/src/skillab/prompts/: __init__.py  registry.py  template.py
skillab-py/src/skillab/prompts/analyst/: make_plan.yaml  synthesize.yaml
skillab-py/src/skillab/prompts/nl2sql/: generate_sql.yaml  handle_error.yaml
skillab-py/src/skillab/tools/: __init__.py  implementations.py  params.py  registry.py  schemas.py  wrapper.py
src/: __init__.py  analyst_agent.py  database.py  guardrails.py  intent_classifier.py  intent_llm.py  main.py  mcp_server.py  memory.py  models.py  nl2sql_agent.py  orchestrator.py  rag_agent.py  rag_service.py  repositories.py  (+1 more)
(+32 files in other folders)
